--- a/Arcade-MoonCresta.qsf
+++ b/Arcade-MoonCresta.qsf
@@ -49,7 +49,7 @@ set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS OFF
 set_global_assignment -name OPTIMIZE_POWER_DURING_FITTING OFF
 set_global_assignment -name FINAL_PLACEMENT_OPTIMIZATION ALWAYS
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
-set_global_assignment -name OPTIMIZATION_MODE BALANCED
+set_global_assignment -name OPTIMIZATION_MODE "HIGH PERFORMANCE EFFORT"
 set_global_assignment -name SEED 1
 
 #============================================================
@@ -354,12 +354,9 @@ set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:sys/build_id.tcl"
 set_global_assignment -name CDF_FILE jtag.cdf
 set_global_assignment -name QIP_FILE sys/sys.qip
 set_global_assignment -name QIP_FILE sys/vip.qip
-set_global_assignment -name VHDL_FILE ROM/ROM_PGM_0.vhd
-set_global_assignment -name VHDL_FILE ROM/GALAXIAN_6L.vhd
-set_global_assignment -name VHDL_FILE ROM/GALAXIAN_1K.vhd
-set_global_assignment -name VHDL_FILE ROM/GALAXIAN_1H.vhd
-set_global_assignment -name VHDL_FILE ROM/GAL_HIT.vhd
-set_global_assignment -name VHDL_FILE ROM/GAL_FIR.vhd
+set_global_assignment -name VHDL_FILE ROM/HIT.vhd
+set_global_assignment -name VHDL_FILE ROM/FIR.vhd
+set_global_assignment -name VHDL_FILE ROM/CLUT.vhd
 set_global_assignment -name VHDL_FILE cpu/T80sed.vhd
 set_global_assignment -name VHDL_FILE cpu/T80as.vhd
 set_global_assignment -name VHDL_FILE cpu/T80_Reg.vhd
